--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes",
+  "name": "luciaauth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,37 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@lucia-auth/adapter-sqlite": "^3.0.0",
+    "@lucia-auth/adapter-prisma": "^3.0.1",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "better-sqlite3": "^9.2.2",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucia": "^3.0.1",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "framer-motion": "^11.2.10",
+    "lucia": "^2.6.0",
     "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "next": "13.4.19",
     "next-themes": "^0.3.0",
-    "oslo": "^1.0.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.8",
-
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.6.2",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
